syntax = "proto3";

package HTM.Communication.V1;

import "common.proto";

service HTMEventsService {
  rpc DeviceConnectionChanged (GrpcDeviceConnectionChangedRequest) returns (GrpcDeviceConnectionChangedResponse);
}

message GrpcDeviceConnectionChangedRequest {
  GrpcDeviceType deviceType = 1;
  bool isConnected = 2;
}

message GrpcDeviceConnectionChangedResponse {
  string error = 1;
}